--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,12 @@
 body{
     margin: 0;
-    background: #09c;
+    background: #38ce55;
     color: white;
+}
+h1{
+    font-family: Arial, sans-serif;
+    font-size: 2em;
+}
+p{
+    padding: 20px;
 }
